# mcc_ssr08

./: .hgignore  INSTALL  README
linux/: INSTALL  README
linux/lib/: INSTALL
linux/lib/src/: CMakeLists.txt  mcc_ssr08.c  mcc_ssr08.h  test_mcc_ssr08.c
linux/python/: INSTALL  README  setup.py
linux/python/examples/: test_mcc_ssr08.py
linux/python/mcc_ssr08/: __init__.py  mcc_ssr08.py
windows/matlab/: INSTALL.txt  README.txt  build_mcc_ssr08.m  disk_stim_example.m  mcc_ssr08.c  mcc_ssr08.m  test_mcc_ssr08.m
windows/matlab/examples/: create_test_curve_1.m  create_test_curve_2.m  disk_stim_example.m  test_mcc_ssr08.m
